--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ python_requires = >=3.8.0
 install_requires =
     h5py>=3.4.0
     netCDF4>=1.5.7
-    numpy<=1.21.5
+    numpy>=1.21.0
     scipy>=1.7.0
     xarray>=0.19.0
     suntransit>=0.1.0
@@ -30,4 +30,4 @@ install_requires =
 [options.extras_require]
 docs = pdoc3>=0.9.2
 sensitivity = SALib>=1.4.5
-simulation = pyl4c>=0.1.0; affine>=2.3.0; rasterio>=1.2.0; affine>=2.3.0; pyproj>=3.3.0
+simulation = pyl4c>=0.1.0; rasterio>=1.2.0; affine>=2.3.0; pyproj>=3.3.0
