--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = mod17
-version = 0.1.0
+version = 0.1.1
 author = K. Arthur Endsley
 author_email = arthur.endsley@ntsg.umt.edu
 description = Python tools for MOD17 algorithm
@@ -12,7 +12,7 @@ classifiers =
 
 [options]
 packages = mod17
-py_modules = mod17.data, mod17.science, mod17.srs, mod17.utils, mod17.calibration, mod17.sensitivity, mod17.simulation
+py_modules = mod17.science, mod17.srs, mod17.utils, mod17.calibration, mod17.sensitivity
 python_requires = >=3.8.0
 install_requires =
     h5py>=3.4.0
@@ -23,6 +23,7 @@ install_requires =
     suntransit>=0.1.0
     tqdm>=4.60.0
     fire>=0.4.0
+include_package_data = False
 
 [options.package_data]
 * = data/*.csv
