--- a/setup.cfg
+++ b/setup.cfg
@@ -31,4 +31,4 @@ include_package_data = False
 [options.extras_require]
 docs = pdoc3>=0.9.2
 sensitivity = SALib>=1.4.5
-simulation = pyl4c>=0.1.0; rasterio>=1.2.0; affine>=2.3.0; pyproj>=3.3.0
+calibration = pymc==4.0.0; aesara>=2.6.0; arviz>=0.12.0
