Added support for fixing parameters in the configuration file

--- a/mod17/data/MOD17_calibration_config.json
+++ b/mod17/data/MOD17_calibration_config.json
@@ -18,6 +18,7 @@
     "tune": "scaling",
     "scaling": 1e-3,
     "objective": "RMSE",
+    "fixed": {},
     "bounds": {
       "LUE_max": [0, 0.005],
       "tmin0": [-35, 0],
