--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,4 +35,4 @@ dependencies = [
 [project.optional-dependencies]
 docs = ["pdoc3>=0.9.2"]
 sensitivity = ["SALib>=1.4.5"]
-calibration = ["pymc==4.0.0", "aesara>=2.6.0", "arviz>=0.12.0"]
+calibration = ["pymc>=5.0.0", "pytensor>=2.18.0", "arviz>=0.13.0"]
