--- a/setup.cfg
+++ b/setup.cfg
@@ -31,4 +31,4 @@ include_package_data = False
 [options.extras_require]
 docs = pdoc3>=0.9.2
 sensitivity = SALib>=1.4.5
-calibration = pymc==4.0.0; aesara>=2.6.0; arviz>=0.12.0
+calibration = pymc>=5.0.0; arviz>=0.13.0; pytensor>=2.18.0
