--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [build-system]
-requires = ["setuptools", "setuptools-scm"]
+requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "mod17"
-version = "0.1.1"
 authors = [
     {name = "K. Arthur Endsley", email = "arthur.endsley@ntsg.umt.edu"}
 ]
@@ -12,6 +11,7 @@ description = "Python tools for MOD17 algorithm"
 readme = "README.md"
 requires-python = ">=3.8"
 license = {file = "LICENSE"}
+dynamic = ["version"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "Development Status :: 3 - Alpha",
@@ -28,6 +28,9 @@ dependencies = [
     "tqdm>=4.60.0",
     "fire>=0.4.0"
 ]
+
+[tool.setuptools.dynamic]
+version = {attr = "mod17.__version__"}
 
 [tool.setuptools.package-data]
 "*" = ["data/*.csv"]
